# rust_dockerized_api

./: Cargo.toml  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  nginx.conf
src/: helloworld.rs  httpserver.rs  lib.rs
