[package]
name = "rust_dockerized_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Hyper used for HTTP server library
hyper = "0.13"
# Tokio runtime for Hyper
tokio = { version = "0.2", features = ["full"] }
# Unit testing
reqwest = { version = "0.10.4", features = ["blocking"] }
clap = { version = "3.0.30", features = ["derive"] }

[dev-dependencies]
cargo-watch = "8.1.2"